tests/lowering/mutually-exclusive-attributes.stderr
error[E014]: attributes `foreign` and `inherent` are mutually exclusive
 >>> ${DIRECTORY}/lowering/mutually-exclusive-attributes.lushui:3:1
  |
3 | @foreign @inherent
  | ^^^^^^^^ conflicting attribute
  |
 >>> ${DIRECTORY}/lowering/mutually-exclusive-attributes.lushui:3:10
  |
3 | @foreign @inherent
  |          ^^^^^^^^^ conflicting attribute
  |

error[E014]: attributes `Nat`, `Int` and `Int32` are mutually exclusive
 >>> ${DIRECTORY}/lowering/mutually-exclusive-attributes.lushui:4:22
  |
4 | data Typ: const Type @Int @Int32 (@Nat 12)
  |                      ^^^^ conflicting attribute
  |
 >>> ${DIRECTORY}/lowering/mutually-exclusive-attributes.lushui:4:27
  |
4 | data Typ: const Type @Int @Int32 (@Nat 12)
  |                           ^^^^^^ conflicting attribute
  |
 >>> ${DIRECTORY}/lowering/mutually-exclusive-attributes.lushui:4:35
  |
4 | data Typ: const Type @Int @Int32 (@Nat 12)
  |                                   ^^^^ conflicting attribute
  |

error: aborting due to 2 previous errors

